<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="simple_activity">Simple Activity</string>
    <string name="simple_fragment">Simple Fragment</string>
    <string name="activity_tab_pager">Activity with TabPager</string>
    <string name="activity_with_search">Activity with Search</string>
    <string name="fragment_with_dialog">Fragment with dialog</string>
    <string name="fragment_with_recycleview">Fragment with recycle view</string>
    <string name="fragment_with_recycleview_click">Fragment with recycle view (click)</string>
    <string name="fragment_with_listview">Fragment with listview</string>
    <string name="fragment_with_expandableview">Fragment with expandable view</string>
    <string name="fragment_with_bottom_sheets">Fragment with bootom sheets</string>
    <string name="fragment_with_retrofit">Fragment with retrofit</string>
    <string name="tab1_fragment">Tab1 Fragment</string>
    <string name="tab2_fragment">Tab2 Fragment</string>
    <string name="tab3_fragment">Tab3 Fragment</string>
    <string name="ipsum">This is bottom sheet dialog</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="dialog_with_layout">Dialog with layout</string>
    <string name="email">E-Mail</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="enter_valid_email">Enter valid e-mail</string>
    <string name="select_date">Select date</string>
    <string name="activity_with_data_binding">Activity with data binding</string>
    <string name="fragment_with_viewpager">Fragment with viewpager</string>
    <string name="waiting_for_result">waiting for result</string>
    <string name="start_new_activity_for_result">Start new activity for result</string>
    <string name="fragment_with_activityresult">Fragment with Activity Result</string>
    <string name="enter_result_text">Enter result text</string>
    <string name="finish_activity">finish activity</string>
    <string name="select_for_gallery">Select for gallery</string>
    <string name="capture_from_camera">Capture from camera</string>
    <string name="fragment_with_capturing_photo">Fragment with capturing photo</string>
    <string name="activity_with_fragments">Activity with Fragments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
