<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/updown_margin"
        android:layout_marginTop="@dimen/updown_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginLeft="@dimen/image_margin"
            android:layout_marginRight="@dimen/image_margin"
            android:background="@mipmap/email" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/book_an_appointment">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/book_an_appointment"
                android:textColorHint="@color/book_an_appointment" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/updown_margin"
        android:layout_marginTop="@dimen/updown_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginLeft="@dimen/image_margin"
            android:layout_marginRight="@dimen/image_margin"
            android:background="@mipmap/date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:hint="@string/date"
                android:paddingLeft="3dp"
                android:textColor="@color/edit_text_view"
                android:textColorHint="@color/edit_text_view"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/book_an_appointment_line" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/updown_margin"
        android:layout_marginTop="@dimen/updown_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginLeft="@dimen/image_margin"
            android:layout_marginRight="@dimen/image_margin"
            android:background="@mipmap/time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/input_time"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:hint="@string/time"
                android:paddingLeft="3dp"
                android:textColor="@color/edit_text_view"
                android:textColorHint="@color/edit_text_view"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/book_an_appointment_line" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>